List all networks or get a network by id
